--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
      tags in the heads tags.
      -google search fonts.google.com
      -push to github
-     PS C:\Barber_Shop04082022> git init
-     PS C:\Barber_Shop04082022> git status
+     C:\Barber_Shop04082022> git init
+     C:\Barber_Shop04082022> git status
+     C:\Barber_Shop04082022> git add .
+     C:\Barber_Shop04082022> git commit -m "barber2022"
+     Barber_Shop04082022> git remote add origin https://github.com/Jobzy23/barber.git
  -->
